--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,7 @@ body {
   text-align: left;
   border-bottom: 1px solid var(--border-color);
   font-weight: 500;
+  color: var(--text-color); /* <-- ADD THIS LINE */
 }
 .patient-list-item:last-child {
   border-bottom: none;
